<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.neighbour_list.DetailsNeighboursActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_details_neighbours_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/colorWhite"
        android:contentDescription="@android:string/unknownName"
        android:tint="@color/colorPrimary"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_details_neighbours_button_back">


        <ImageView
            android:id="@+id/activity_details_neighbours_avatar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1.5"
            android:contentDescription="@string/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/some_details"/>

        <TextView
            android:id="@+id/activity_details_neighbours_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-80dp"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TableLayout
            android:id="@+id/some_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1.2"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/activity_details_neighbours_avatar"
            app:layout_constraintBottom_toTopOf="@+id/some_description">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="2"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/activity_details_neighbours_location">

                <TextView
                    android:id="@+id/activity_details_neighbours_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Caroline"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:layout_marginStart="15sp"
                    app:layout_constraintStart_toStartOf="parent"/>

            </LinearLayout>

            <TextView
                android:id="@+id/activity_details_neighbours_location"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="10dp"
                android:lineSpacingExtra="100dp"
                android:orientation="horizontal"
                android:text="@string/my_location"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/activity_details_neighbours_phone_number"/>


            <TextView
                android:id="@+id/activity_details_neighbours_phone_number"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:lineSpacingExtra="100dp"
                android:text="@string/my_phone_number"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/activity_details_neighbours_location"
                app:layout_constraintBottom_toTopOf="@+id/activity_details_neighbours_www_address"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:id="@+id/activity_details_neighbours_www_address"
                android:layout_gravity="center"
                android:lineSpacingExtra="100dp"
                android:text="@string/my_www_address"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/ic_baseline_language_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/activity_details_neighbours_phone_number"
                app:layout_constraintBottom_toBottomOf="parent"/>
            


        </TableLayout>


        <TableLayout
            android:id="@+id/some_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/activity_details_neighbours_about_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/about_me"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/activity_details_neighbours_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/there_you_will_have_some_details"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>


        </TableLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activity_details_neighbours_button_favorite"
            android:layout_width="wrap_content"
            android:layout_height="167dp"
            android:layout_gravity="end"
            android:layout_marginTop="-425dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorWhite"
            android:contentDescription="@android:string/unknownName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/star_big_on"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
